@@ -413,10 +413,10 @@ class P4A extends P4A_Object
 				isset($_REQUEST['q']) and
 				isset($this->objects[$_REQUEST['_object']])) {
 				$object =& $this->objects[$_REQUEST['_object']];
-				$db = p4a_db::singleton($object->data_field->getDSN());
+				$db = P4A_DB::singleton($object->data_field->getDSN());
 				$data =& $object->data;
 				$description_field = $object->getSourceDescriptionField();
-				$q = P4A_Quote_SQL_Value($_REQUEST['q']);					
+				$q = $db->quote($_REQUEST['q']);					
 				$where = $db->getCaseInsensitiveLikeSQL($description_field, "%$q%");
 				$old_where = $data->getWhere();
 				if ($old_where) {
