@@ -1,7 +1,7 @@
 3.0.0 TODO
 - db navigator movements (wait for jQuery UI 1.5)
 - default width for fields?
-- p4a_quote_sql_value should take care of the current db engine
+- p4a_table sort on joined fields
 
 2.99.9
 - a bug with P4A_Field::getAsRadio() was solved (labels can be clicked now)
@@ -10,6 +10,8 @@
 - P4A_DB::nextSequenceId() method adds the "_seq" postfix depending on the db you're using
 - SQL dump for PostgreSQL was added to products_catalogue sample
 - products_catalogue' SQL dump for MySQL was renamed to db_dump_mysql.sql
+- P4A_Quote_SQL_Value() global function was removed
+- P4A_DB::quote() method was added (it's a wrapper for Zend_DB quote method)
 
 2.99.8
 - some minor changes were done after strict validation checks
